Fix scrollbar and scrolling active link into view on the sidebar
Scrollbar now scrolls over to the actual link and positions it at the center of sidebar. This is less jarring that scrolling to the section header at the top. The logo is also moved into the scrollable sidebar but made sticky through CSS.

Tested working on both desktop and mobile.

--- a/_sass/modules/_layout.scss
+++ b/_sass/modules/_layout.scss
@@ -70,12 +70,16 @@ body {
 .sidebar__logo {
   border-bottom: 1px solid $color-blue-4;
   color: $color-white;
+  background-color: $color-blue-5;
   font-size: $base-font-size * 2;
   font-weight: 300;
   height: $logo-height;
   line-height: $logo-height;
   margin-bottom: 0;
   text-align: center;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 
 
   // &:after {
@@ -102,8 +106,7 @@ body {
 
 .sidebar__nav-interior {
   height: 100%;
-  // Add a bit more padding at the bottom for consistency.
-  padding: $spacing-unit $spacing-unit ($spacing-unit + $logo-height);
+  padding: $spacing-unit;
 }
 
 .section__header {
